--- a/qva/package.json
+++ b/qva/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
