--- a/qva/package.json
+++ b/qva/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "babel-plugin-glsl": "^1.0.0",
     "framer-motion": "^11.3.21",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
