--- a/qva/package.json
+++ b/qva/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "^1.4.0",
     "babel-plugin-glsl": "^1.0.0",
     "framer-motion": "^11.3.21",
     "glsl-noise": "^0.0.0",
